--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -55,3 +55,9 @@
     transform: scale(.5);
   }
 }
+
+
+.layout-wrapper {
+  display: grid;
+  grid-template-columns: minmax(0, 300px) minmax(0, 1fr);
+}
