--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,6 +5,7 @@
 /* Variables personalizadas */
 @layer base {
   :root {
+    /* --color-primary: #42C83C; */
     --color-primary: #42C83C;
     --color-secondary: #1C1B1B;
     --color-tertiary: #343434;
@@ -24,40 +25,71 @@
 .animate-beat-slow {
   animation: beat-slow 10s infinite ease;
 }
+
 .animate-beat {
   animation: beat 7s infinite linear;
 }
+
 .animate-beat-reverse {
   animation: beat-reverse 7s infinite linear;
 }
 
 @keyframes beat-slow {
-  0%, 100% {
+
+  0%,
+  100% {
     transform: scale(1);
   }
+
   50% {
     transform: scale(1.1);
   }
 }
+
 @keyframes beat {
-  0%, 100% {
+
+  0%,
+  100% {
     transform: scale(.5);
   }
+
   50% {
     transform: scale(1.3);
   }
 }
+
 @keyframes beat-reverse {
-  0%, 100% {
+
+  0%,
+  100% {
     transform: scale(1.2);
   }
+
   50% {
     transform: scale(.5);
   }
 }
 
+.sticky-navigation{
+  position: sticky;
+  top: 12px;
+  height: calc(100vh - 24px);
+}
 
 .layout-wrapper {
   display: grid;
-  grid-template-columns: minmax(0, 300px) minmax(0, 1fr);
+  grid-template-columns: minmax(0, 250px) minmax(0, 1fr);
+}
+
+.card__pending {
+  background-color: #FF565910;
+  border-color: #FF565960;
+}
+.card__inprogress {
+  background-color: #FFCC0010;
+  border-color: #FFCC0060;
+}
+.card__done {
+  background-color: #42C83C10;
+  border-color: #42C83C60;
 }
