--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,7 +11,7 @@
     --color-tertiary: #343434;
     --color-dark: #0D0C0C;
     --color-dark-30: #0D0C0C30;
-    --color-light: #F5F5F5;
+    --color-light: #f2f2f2;
   }
 }
 
